--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
+	
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead><tr><th>Name</th><th>Roll No.</th></tr></thead>
+		<tbody><tr><td></td><td></td></tr> <tr><td></td><td></td></tr></tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
